# mCc

./: .gitignore  CMakeLists.txt  README.md  README.txt  meson.build
benchmark/parser/: nested_expression.c
doc/examples/: array_calculations.mC  bubble_sort1.mC  even_pi.mC  fem.mC  functions.mC
doc/examples/exampleCode1/: ex1.mC  ex1.mC.stdout
doc/examples/exampleCode2/: ex2.mC  ex2.mC.stdout
doc/examples/exampleCode3/: ex3.mC  ex3.mC.stdout
doc/examples/exampleCode4/: ex4.mC  ex4.mC.stdout
doc/test_mCc/: buildins.c  test1.mC  usage.txt
include/mCc/: assembler.h  ast.h  ast_function_return_check.h  ast_print.h  ast_symbol_table.h  ast_type_checking.h  ast_visit.h  buildins_c.h  error_manager.h  parser.h  symbol_table.h  tac.h  tac_print.h
src/: CMakeLists.txt  assembler.c  ast.c  ast_function_return_check.c  ast_print.c  ast_symbol_table.c  ast_type_checking.c  ast_visit.c  error_manager.c  parser.y  scanner.l  symbol_table.c  tac.c  tac_print.c  uthash.h
test/: assembler.cpp  cfg.cpp  expect  integration  parser.cpp  return_check.cpp  run  symbol_table.cpp  tac.cpp  type_checking.cpp
